# aoc-2021

./: .gitignore  pyproject.toml
aoc_2021/: __init__.py  day1.py  day2.py  day3.py  day4.py
tests/: test_aoc_2021.py
