[tool.poetry]
name = "aoc-2021"
version = "0.1.0"
description = ""
authors = ["Ismail Bello <ismail.bello@cmrsurgical.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
typer = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
